# recall

./: .gitignore  BUILD_LOG.md  CHANGELOG.md  CITATION.cff  CITATIONS.bib  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  NOTICE  PUBLISHING.md  README.md  SECURITY.md  STATE.md  VALIDATION_RESULTS.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  REPORT.md  run_all.sh  visualize.py
benchmarks/baselines_comparison/: baselines.py
benchmarks/bge_gamma/: run.py
benchmarks/bound_calibration/: run.py
benchmarks/bound_calibration/results/: calibration.json
benchmarks/hotpotqa/: run.py
benchmarks/hotpotqa_bge/: run.py
benchmarks/junk_replay/: run.py
benchmarks/longmemeval/: run.py
benchmarks/longmemeval/results/: results_n15_k5.json  results_n30_k5.json  results_n30_k5_stratified.json
benchmarks/mem0_head_to_head/: run.py
benchmarks/memoryagentbench/: run.py
benchmarks/memoryagentbench/results/: results.json
benchmarks/scale_stress/: run.py
benchmarks/scale_stress/results/: scale_n5000.json
benchmarks/synthetic_gamma/: run.py
benchmarks/v03_full_stack/: run.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CUSTOMER_JOURNEY.md  DEPLOYMENT.md  LAUNCH.md  MATH.md  PRINCIPLES.md  PUBLISH_NPM_MCP.md  PUBLISH_PYPI.md  USAGE.md
examples/: full_demo.py  quickstart.py  real_llm_demo.py
extensions/browser/: README.md  manifest.json
extensions/browser/src/: background.js  content.css  content.js  popup.html  popup.js
extensions/mcp_bundle/: README.md  manifest.json
landing/: README.md  index.html  script.js  style.css  usage.html  usage.js
npm/: README.md  package.json
src/recall/: __init__.py  api.py  cli.py  config.py  embeddings.py  llm.py  llm_quality.py  llm_router.py  mcp_server.py  personal.py  server.py  setup_wizard.py  telemetry.py  types.py
src/recall/audit/: __init__.py  log.py
src/recall/bound/: __init__.py  conformal.py  pac_bayes.py  rag_bound.py  support.py
src/recall/consolidate/: __init__.py  bmrs.py  mean_field.py  motif.py  pmed_score.py  scheduler.py
src/recall/core/: __init__.py  storage.py
src/recall/geometry/: __init__.py  gamma.py  identifiability.py  llm_dual_view.py  spectral.py
src/recall/graph/: __init__.py  curvature.py  sheaf.py  spectral.py  topology.py  transport.py
src/recall/integrations/: __init__.py  letta_adapter.py
src/recall/retrieval/: __init__.py  intent.py  linearize.py  multi_hop.py  pcsf.py  pcst.py  router.py  walk.py
src/recall/write/: __init__.py  bio_fingerprint.py  edge_classifier.py  pipeline.py  quality.py  splitter.py
tests/: test_api.py  test_bio_fingerprint.py  test_bound.py  test_conformal.py  test_consolidate.py  test_edge_classifier.py  test_gamma.py  test_graph_curvature.py  test_graph_spectral.py  test_graph_topology.py  test_identifiability.py  test_intent.py  test_letta_adapter.py  test_pcsf.py  test_pcst.py  test_pipeline.py  test_pmed_score.py  test_quality.py  test_rag_bound.py  test_router.py  test_server.py  test_sheaf.py  test_spectral_projector.py  test_storage.py  test_telemetry.py  test_tfidf_embedder.py  test_walk.py
