[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typed-recall"
version = "0.2.1"
description = "Memory layer for AI agents — typed-edge graph, bounded hallucination, audit-grade, surgically forgettable. Local SQLite + MCP server. Full install includes BGE neural embedder and OpenAI client out of the box."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Yash Aggarwal" }]
keywords = [
    "ai", "memory", "rag", "knowledge-graph", "llm-agents",
    "mcp", "agent-memory", "typed-edges", "hallucination-bound",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # --- core (always required) ---
    "numpy>=1.24",
    "scikit-learn>=1.3",          # TfidfEmbedder + structural-support check
    # SQLite is stdlib.
    # --- heavy deps now bundled in the default install (v0.2 promise) ---
    "sentence-transformers>=2.2", # BGE neural embedder; pulls torch + transformers
    "openai>=1.0",                # real LLM client (OpenAI / TokenRouter / OpenAI-compatible)
    "mcp>=1.0",                   # MCP server (`recall-mcp`)
    "scipy>=1.10",                # spectral, sheaf, BMRS math
    "networkx>=3.0",              # path / Steiner-tree algorithms
    "python-dotenv>=1.0",         # auto-load ~/.recall/.env on import
]

[project.optional-dependencies]
# Extra graph backends (power-user)
gudhi = ["gudhi>=3.8"]            # persistent homology
ot    = ["POT>=0.9"]              # optimal transport (Wasserstein)
# HTTP server
server = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]
# Other LLM providers
llm-anthropic = ["anthropic>=0.20"]
# Dev / test / build
test = ["pytest>=7.0", "pytest-cov", "hypothesis>=6.0"]
dev  = ["typed-recall[test,gudhi,ot,server]", "ruff", "mypy", "build", "twine"]
# Convenience meta-extra: everything except dev tooling
all  = ["typed-recall[gudhi,ot,server]"]

[project.scripts]
recall = "recall.cli:main"
recall-me = "recall.personal:main"
recall-mcp = "recall.mcp_server:main"
recall-setup = "recall.setup_wizard:main"

[project.urls]
Homepage = "https://github.com/yash194/recall"
Repository = "https://github.com/yash194/recall"
Documentation = "https://github.com/yash194/recall/tree/main/docs"
Issues = "https://github.com/yash194/recall/issues"
Changelog = "https://github.com/yash194/recall/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
recall = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 110
target-version = "py310"
